[gd_scene load_steps=6 format=3 uid="uid://4bcp1vy2nveg"]

[ext_resource type="Script" uid="uid://dllwo57hy65j7" path="res://scripts/final_menu.gd" id="1_3iht6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1qq87"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3iht6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iv38b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5hqir"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_3iht6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -60.0
offset_right = 67.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(1, 1, 0.298039, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0.298039, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0.298039, 1)
theme_override_constants/outline_size = 15
theme_override_constants/align_to_largest_stylebox = 10
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = SubResource("StyleBoxEmpty_1qq87")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3iht6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_iv38b")
theme_override_styles/normal = SubResource("StyleBoxEmpty_5hqir")
text = "Restart"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(1, 1, 0.298039, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0.298039, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0.298039, 1)
theme_override_constants/outline_size = 15
theme_override_constants/align_to_largest_stylebox = 10
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = SubResource("StyleBoxEmpty_1qq87")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3iht6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_iv38b")
theme_override_styles/normal = SubResource("StyleBoxEmpty_5hqir")
text = "Exit
"

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="focus_entered" from="VBoxContainer/restart" to="." method="_on_restart_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/restart" to="." method="_on_restart_focus_exited"]
[connection signal="pressed" from="VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="focus_entered" from="VBoxContainer/exit" to="." method="_on_exit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/exit" to="." method="_on_exit_focus_exited"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
